<resources>
    <string name="app_name">PelotaTracker</string>
    <string name="type">Type</string>
    <string name="NewBall">New Ball</string>
    <string name="choose_color">Choose color</string>
    <string name="save">Save</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="blue">blue</string>
    <string name="gray">gray</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="balls">Balls</string>
    <string name="ball_list">Ball List</string>
    <string name="ball_detail">Ball Detail</string>
    <string name="form_ball">Create new ball</string>
    <string name="ball_img">Ball IMG</string>
    <string name="color">Color</string>
    <string name="ball">Ball</string>
</resources>