<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ballListFragment">

    <fragment
        android:id="@+id/ballListFragment"
        android:name="com.rgonzalez.pelotatracker.ui.list.BallListFragment"
        android:label="@string/ball_list" >
        <action
            android:id="@+id/action_ballListFragment_to_ballFragment"
            app:destination="@id/ballFragment" />
        <action
            android:id="@+id/action_ballListFragment_to_formBallFragment"
            app:destination="@id/formBallFragment" />
    </fragment>
    <fragment
        android:id="@+id/ballFragment"
        android:name="com.rgonzalez.pelotatracker.ui.detail.BallFragment"
        android:label="@string/ball_detail" />
    <fragment
        android:id="@+id/formBallFragment"
        android:name="com.rgonzalez.pelotatracker.ui.form.FormBallFragment"
        android:label="@string/form_ball" />
</navigation>